[project]
name = "llm-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-text-splitters>=0.3.8",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.1",
    "pypdf>=5.7.0",
]
